added sample posts, fixed issues and title

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
 		<a href="#">Back to top</a>
 	</p>
 	<p>
-		&copy; 2014 The e-Lite group
+		&copy; 2014 The <a href="http://elite.polito.it">e-Lite</a> group.
 	</p>
 </footer>
 </div>
