--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -9,13 +9,13 @@
 							class="icon-bar"></span> <span class="icon-bar"></span> <span
 							class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="/index.html"><img
-						src="/assets/img/dog-logo-grey.png" />{{ site.name }}</a>
+					<a class="navbar-brand" href="/index.html">{{ site.name }}</a>
 				</div>
 				<div class="navbar-collapse collapse">
 					<ul class="nav navbar-nav">
-						<li {% if page.active == 'Home' %} class="active" {% endif %}><a href="/index.html">Home</a></li>
-						<li {% if page.active == 'Projects' %} class="active" {% endif %}><a href="/projects.html">Projects</a></li>
+						<li><a href="/index.html">Home</a></li>
+						<li><a href="#completed-projects">Completed projects</a></li>
+						<li><a href="#ongoing-projects">Ongoing projects</a></li>
 					</ul>
 				</div>
 			</div>
