--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -7,13 +7,15 @@
 	height: 32px;
 }
 
-.navbar-brand {
-	padding-top: 11px;
+.navbar-inverse .navbar-brand , .navbar-brand a {
 	font-family: 'Ubuntu', sans-serif;
+	font-weight: bold;
+	color: white;
 }
 
 body {
 	font-family: 'Ubuntu', sans-serif;
+	padding-top: 70px;
 }
 
 img.pull-left {
@@ -27,9 +29,9 @@ img.small {
 
 img.ribbon
 {
-	position: fixed;  
-	top: 0; 
-	right: 0; 
+	position: fixed;
+	top: 0;
+	right: 0;
 	border: 0;
 	z-index: 100;
 }
@@ -53,18 +55,24 @@ img.ribbon
 	color: #333;
 }
 
+.marketing h1
+{
+	padding-top: 50px;
+	font-size: 58px;
+}
+
 @media ( min-width : 768px) {
 	.sidebar {
 		position: fixed;
 		top: 100px;
 		left: 30px;
 	}
-	
+
 	img.ribbon
 	{
-		position: fixed; 
-		top: 0; 
-		right: 0; 
+		position: fixed;
+		top: 0;
+		right: 0;
 		border: 0;
 		z-index: 2000;
 	}
@@ -85,4 +93,3 @@ img.ribbon
 		margin-top: 60px;
 	}
 }
-
