--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -14,8 +14,8 @@
 				<div class="navbar-collapse collapse">
 					<ul class="nav navbar-nav">
 						<li><a href="/index.html">Home</a></li>
-						<!--<li><a href="#completed-projects">Completed projects</a></li>
-						<li><a href="#ongoing-projects">Ongoing projects</a></li>-->
+						<li><a href="#showcased-projects">Showcased projects</a></li>
+						<li><a href="#other-projects">Other projects</a></li>
 					</ul>
 				</div>
 			</div>
